--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -22,6 +22,13 @@ canvas {
     display: block;
 }
 
+textarea {
+  white-space: nowrap;
+  font-family: monospace;
+  height: 100px;
+}
+
+
 // scss-lint:disable ImportantRule, SingleLinePerSelector, SelectorFormat
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
