--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -1,2 +1,43 @@
-Home page<br><br>
-<div class="asset-img-1"></div>
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-3">Hello, world!</h1>
+
+    <div class="form-group">
+      <label for="indata">Input data:</label>
+      <textarea id="indata" class="form-control" ng-model="indata" ng-init_="todo"></textarea>
+    </div>
+
+    <div class="form-group">
+      <button class="btn btn-primary" ng-click="calculateOutdata()">remap data</button>
+    </div>
+
+    <div class="form-group">
+      <label for="outdata">Output data:</label>
+      <textarea id="outdata" class="form-control" ng-bind="outdata"></textarea>
+    </div>
+
+    <p>Just paste the input data above and click remap!</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <h2>Heading</h2>
+      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+      <h2>Heading</h2>
+      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+   </div>
+    <div class="col-md-4">
+      <h2>Heading</h2>
+      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    </div>
+  </div>
+
+  <hr>
+</div>
