--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -11,7 +11,7 @@
  -->
 <!--     <div class="form-group">
       <label for="indata">Input data:</label>
-      <div id="indata" class="form-control" ng-model="indata" ng-click="getCursorPos($event)" ng-keyup="getCursorPos($event)" ng-change="calculateOutdata()" contenteditable></div>
+      <div id="indata" class="form-control" ng-model="indata" ng-click="getCursorPos()" ng-keyup="getCursorPos()" ng-change="calculateOutdata()" contenteditable></div>
       <p>{{text}}</p>
     </div>
  -->
