--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -67,7 +67,7 @@
             <td><input ng-model="map.padding_symbol" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
           </tr>
           <tr>
-            <td>Input source (0 = this row, 1 = section header row #1, #2, etc):</td>
+            <td>Input source (0 = each data row, 1 = section header row #1, #2, etc):</td>
             <td><input ng-model="map.sourcerow" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
           </tr>
           <tr>
