support for multiple sections

--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-group">
-      <label for="headerrowcount">Number of rows in section header:</label>
+      <label for="headerrowcount">Number of rows in section header (0 if data is not grouped into sections):</label>
       <input type="text" id="headerrowcount" class="form-control" ng-model="headerrowcount" ng-change="calculateOutdata()"></input>
     </div>
 
