--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -29,6 +29,10 @@ canvas {
   overflow: scroll;
 }
 
+#indata {
+  background-color: #eee;
+}
+
 [contenteditable] {
   border: 2px dotted #ccc;
   background-color: #eee;
