--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -15,33 +15,64 @@
       <p>{{text}}</p>
     </div>
  -->
+    <div class="alert alert-danger" role="alert" ng-bind="erroralert" ng-show="erroralert"></div>
+
     <div class="form-group" ng-show="outdata.length">
       <label for="outdata">Output data:</label>
       <textarea id="outdata" class="form-control" ng-bind="outdata" ng-click="onTextClick($event)"></textarea>
     </div>
 
-    <div class="alert alert-danger" role="alert" ng-bind="erroralert" ng-show="erroralert"></div>
-
     <div class="form-group">
       <button class="btn btn-primary" ng-click="calculateOutdata()">remap data</button>
     </div>
 
-    <div class="form-group">
-      <label for="headerselector">Use section header rows that match this <a href="https://regex101.com/" target="_BLANK">regex</a> (leave blank if data is not grouped into sections):</label>
-      <input type="text" id="headerselector" class="form-control" ng-model="headerselector" ng-change="calculateOutdata()"></input>
+    <div class="row">
+      <div class="form-group col-md-4">
+        <label for="headerselector">Use section header rows that start with (leave blank if data is not grouped into sections):</label>
+        <input type="text" id="headerselector" class="form-control" ng-model="headerselector" ng-change="calculateOutdata()"></input>
+      </div>
+
+      <div class="form-group col-md-4">
+        <label for="headerrowcount">Number of rows in section header (0 if data is not grouped into sections):</label>
+        <input type="text" id="headerrowcount" class="form-control" ng-model="headerrowcount" ng-change="calculateOutdata()"></input>
+      </div>
+
+      <div class="form-group col-md-4">
+        <label for="lineselector">Only include data rows that start with:<br/>&nbsp;</label>
+        <input type="text" id="lineselector" class="form-control" ng-model="lineselector" ng-change="calculateOutdata()"></input>
+      </div>
     </div>
 
-    <div class="form-group">
-      <label for="headerrowcount">Number of rows in section header (0 if data is not grouped into sections):</label>
-      <input type="text" id="headerrowcount" class="form-control" ng-model="headerrowcount" ng-change="calculateOutdata()"></input>
-    </div>
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th>Name (for reference only):</th>
+          <th>Output width:</th>
+          <th>Output padding placement ("start" or "end"):</th>
+          <th>Output padding character:</th>
+          <th>Input source (0 = data row, 1/2/3 = section header row #):</th>
+          <th>Input start position:</th>
+          <th>Input width:</th>
+          <th>Type (todo):</th>
+        </tr>
+      </thead>
+      <tbody>
+          <tr ng-repeat="map in maps">
+            <td><input ng-model="map.name" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.outwidth" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.padding_position" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.padding_symbol" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.sourcerow" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.instart" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.inwidth" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+            <td><input ng-model="map.type" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
+          </tr>
+      </tbody>
+    </table>
 
-    <div class="form-group">
-      <label for="lineselector">Include only lines that match this <a href="https://regex101.com/" target="_BLANK">regex</a>:</label>
-      <input type="text" id="lineselector" class="form-control" ng-model="lineselector" ng-change="calculateOutdata()"></input>
-    </div>
 
-    <table class="table table-condensed" ng-repeat="map in maps">
+
+    <table class="hide table table-condensed" ng-repeat="map in maps">
       <thead>
         <tr>
           <th>{{map.name}}</th>
