--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -26,6 +26,8 @@
       <button class="btn btn-primary" ng-click="calculateOutdata()">remap data</button>
     </div>
 
+    <hr/>
+
     <div class="row">
       <div class="form-group col-md-4">
         <label for="headerselector">Use section header rows that start with (leave blank if data is not grouped into sections):</label>
@@ -42,6 +44,8 @@
         <input type="text" id="lineselector" class="form-control" ng-model="lineselector" ng-change="calculateOutdata()"></input>
       </div>
     </div>
+
+    <hr/>
 
     <table class="table table-condensed">
       <thead>
@@ -68,6 +72,7 @@
             <td><input ng-model="map.type" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
             <td><button class="btn btn-danger" ng-click="removeMap($index)">remove</button></td>
             <td><button class="btn btn-success" ng-click="addMap($index)">add</button></td>
+            <td><pre ng-show="map.preview">{{map.preview}}</pre></td>
           </tr>
       </tbody>
     </table>
