--- a/website/tpls/views/home.html
+++ b/website/tpls/views/home.html
@@ -61,7 +61,7 @@
           <th>Input width:</th>
           <th>Type (todo):</th>
           <td></td>
-          <td><button class="btn btn-success" ng-click="addMap(-1)">add</button></td>
+          <td id="permadd"><button class="btn btn-success" ng-click="addMap(-1)">add</button></td>
         </tr>
       </thead>
       <tbody>
