--- a/website/tpls/views/home.html
+++ b/website/tpls/views/home.html
@@ -76,7 +76,7 @@
             <td><input ng-model="map.type" class="form-control" type="text" ng-change="calculateOutdata()" /></td>
             <td><button class="btn btn-danger" ng-click="removeMap($index)">remove</button></td>
             <td><button class="btn btn-success" ng-click="addMap($index)">add</button></td>
-            <td><pre ng-show="map.preview">"{{map.preview}}"</pre></td>
+            <td><pre ng-show="map.preview">{{map.preview}}</pre></td>
           </tr>
       </tbody>
     </table>
