--- a/src/tpls/views/home.html
+++ b/src/tpls/views/home.html
@@ -91,7 +91,7 @@
     <div class="alert alert-danger" role="alert" ng-bind="prettymapserror" ng-show="prettymapserror"></div>
 
     <div class="form-group" ng-show="maps.length">
-      <label for="prettymaps">Edit / copy / paste maps JSON here:</label>
+      <label for="prettymaps">Or edit / copy / paste maps JSON here:</label>
       <textarea id="prettymaps" class="form-control" ng-model="prettymaps" ng-model-options="{ getterSetter: true, debounce: 2000 }"></textarea>
     </div>
 
